syntax = "proto3";

package Contoso.Grpc;

// [csharp_declaration]
option csharp_namespace = "Contoso.Grpc";

message LegacyQueryRequest {
    bytes LegacyAqm = 1;
}
